--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Georgia', serif;
-  background: url('/Assets/background.png') no-repeat center center fixed;
+  background: url('/Assets/bground.png') no-repeat center center fixed;
   background-size: cover;
   color: #4b2e1e;
 }
