--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body {
 
 /* Set background image */
 body {
-  background: url('Assets/background.png') no-repeat center center fixed;
+  background: url('Assets/bground.png') no-repeat center center fixed;
   background-size: cover;
 }
 
